# telebot

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  calendar.py  calendar_notification.py  compose.yml  cron_helper.bash  pyproject.toml  pyrightconfig.json  reply.py  requirements.txt  routine.py
samples/: telebot.yml  weather.yml  webdav.yml
